; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_gen.c_gen_char.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_gen.c_gen_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@char_to_escape = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [6 x i8] c"'\\%c'\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"'%c'\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"'\\x%X'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gen_char(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8*, i8** @char_to_escape, align 8
  %4 = load i8, i8* %2, align 1
  %5 = zext i8 %4 to i64
  %6 = getelementptr inbounds i8, i8* %3, i64 %5
  %7 = load i8, i8* %6, align 1
  %8 = icmp ne i8 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load i8*, i8** @char_to_escape, align 8
  %11 = load i8, i8* %2, align 1
  %12 = zext i8 %11 to i64
  %13 = getelementptr inbounds i8, i8* %10, i64 %12
  %14 = load i8, i8* %13, align 1
  %15 = call i32 @genf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8 zeroext %14)
  br label %27

16:                                               ; preds = %1
  %17 = load i8, i8* %2, align 1
  %18 = call i64 @isprint(i8 signext %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %16
  %21 = load i8, i8* %2, align 1
  %22 = call i32 @genf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8 zeroext %21)
  br label %26

23:                                               ; preds = %16
  %24 = load i8, i8* %2, align 1
  %25 = call i32 @genf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8 zeroext %24)
  br label %26

26:                                               ; preds = %23, %20
  br label %27

27:                                               ; preds = %26, %9
  ret void
}

declare dso_local i32 @genf(i8*, i8 zeroext) #1

declare dso_local i64 @isprint(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
